# stostatus

./: Cargo.toml  README.md
src/: api.rs  error.rs  gzip.rs  http.rs  json.rs  magic.rs  main.rs  search.rs
